Adicionei um parágraffo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia illo reprehenderit adipisci expedita tenetur dolor fuga tempora, deleniti vel provident sit sed debitis esse ullam ex explicabo saepe magnam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus nobis, doloremque illum magni quia exercitationem labore autem voluptate ab praesentium, nisi voluptas aliquid totam earum sunt molestias tempore! Sed.
+    </p>
 </body>
 </html>
